RESOLVED FIXED305032
REGRESSION (296844@main): filter region fails to cover transformed children of the filtered element
https://bugs.webkit.org/show_bug.cgi?id=305032
Summary REGRESSION (296844@main): filter region fails to cover transformed children o...
Simon Fraser (smfr)
Reported 2026-01-06 21:46:32 PST
Created attachment 477925 [details] Test case Ana Tudor points out[1] that Safari has a regression related to the filter region in some situations. The codepen shows filters on an element with a transformed ::after, but this also affects transformed descendants. Simpler test case attached. [1] https://bsky.app/profile/anatudor.bsky.social/post/3mbqpvt7bjk2a [2] https://codepen.io/thebabydino/pen/EayKKjQ??editors=1100
Attachments
Test case (1.11 KB, text/html)
2026-01-06 21:46 PST, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2026-01-06 21:46:38 PST
Nathan Solomon
Comment 2 2026-01-09 12:30:57 PST
EWS
Comment 3 2026-01-09 17:56:01 PST
Committed 305393@main (0cb4b26572e4): <https://commits.webkit.org/305393@main> Reviewed commits have been landed. Closing PR #56354 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.